hphp/hack/test/ifc/check/pass_external.php.exp
=== IFC analysis results for pass_external.php
File "pass_external.php", line 39, characters 3-8:
Context-implicit policy leaks into `A_lump` via `A`. (Typing[4380])
  File "pass_external.php", line 26, characters 14-16:
  Leakage source
File "pass_external.php", line 69, characters 3-8:
Context-implicit policy leaks into `A` via `pc`. (Typing[4380])
  File "pass_external.php", line 23, characters 14-16:
  Leakage sink
File "pass_external.php", line 69, characters 3-8:
Context-implicit policy leaks into `A` via `exn_lump`. (Typing[4380])
  File "pass_external.php", line 23, characters 14-16:
  Leakage sink
File "pass_external.php", line 69, characters 3-8:
Context-implicit policy leaks into `A` via `A_lump`. (Typing[4380])
  File "pass_external.php", line 24, characters 14-23:
  Another program point contributing to the leakage
  File "pass_external.php", line 23, characters 14-16:
  Leakage sink
File "pass_external.php", line 69, characters 3-8:
Context-implicit policy leaks into `A` via `A`. (Typing[4380])
  File "pass_external.php", line 24, characters 14-23:
  Another program point contributing to the leakage
  File "pass_external.php", line 23, characters 14-16:
  Leakage sink
File "pass_external.php", line 61, characters 3-14:
Data with policy `PRIVATE` appears in context `A`. (Typing[4379])
  File "pass_external.php", line 14, characters 12-16:
  This may be the data source with policy `PRIVATE`
  File "pass_external.php", line 23, characters 14-16:
  This may be the data sink with policy `A`
  File "pass_external.php", line 24, characters 14-23:
  Another program point contributing to the illegal flow
